Use valueOf()
- Remove redundant calls to super()